--- a/CSS/jadwal.css
+++ b/CSS/jadwal.css
@@ -4,7 +4,7 @@ h1{
 }    
     table {
       border-collapse: collapse;
-      margin: 0 auto;
+      margin: 100px;
     }
     
     th, td {
@@ -14,6 +14,25 @@ h1{
     
     th {
       background-color: #4CAF50;
+    }
+
+    .edit{
+      color: black ;
+      padding: 5px;
+      background-color: aqua;
+      border-radius: 5px;
+      margin-bottom: 50px;
+    }
+    .hapus{
+      color: black ;
+      padding: 5px;
+      background-color: rgb(223, 10, 10);
+      border-radius: 5px;
+      margin-bottom: 50px;
+    }
+
+    a{
+      text-decoration: none;
     }
     
 
